force-app/main/default/objects/CGD_Contract__c/CGD_Contract__c.object-meta.xml
<CustomObject>
    <description>For CGD</description>
    <label>Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>