force-app/main/default/objects/CGD_Contract__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <description>簽約客戶</description>
    <label>Account Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.CGD_Account_For__c</field>
            <operation>equals</operation>
            <value>Customer Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>