force-app/main/default/objects/CGD_Contract__c/fields/Annual_KPI_indicators__c.field-meta.xml
<CustomField>
    <fullName>Annual_KPI_indicators__c</fullName>
    <description>年度KPI 指標</description>
    <label>Annual KPI indicators</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>