force-app/main/default/objects/CGD_Contract__c/fields/Company_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Company_Signatory__c</fullName>
    <label>Company Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>