force-app/main/default/objects/CGD_Contract__c/fields/Company_Signatory_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Signatory_Date__c</fullName>
    <description>公司簽約日期</description>
    <label>Company Signatory Date</label>
    <type>Date</type>
</CustomField>