force-app/main/default/objects/CGD_Contract__c/fields/Company_Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>Company_Signatory_Title__c</fullName>
    <description>公司簽約人職稱</description>
    <label>Company Signatory Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>