force-app/main/default/objects/CGD_Contract__c/fields/Contract_Currency__c.field-meta.xml
<CustomField>
    <fullName>Contract_Currency__c</fullName>
    <description>合約幣別</description>
    <label>Contract Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_Currency</valueSetName>
    </valueSet>
</CustomField>