force-app/main/default/objects/CGD_Contract__c/fields/Contract_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_months__c</fullName>
    <formula>(YEAR(End_Date__c) - YEAR(Start_Date__c)) * 12 + (MONTH(End_Date__c) - MONTH(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>