force-app/main/default/objects/CGD_Contract__c/fields/Customer_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>客戶簽約人</description>
    <label>Customer Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>