force-app/main/default/objects/CGD_Contract__c/fields/Customer_Signatory_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signatory_Date__c</fullName>
    <description>客戶簽約日期</description>
    <label>Customer Signatory Date</label>
    <type>Date</type>
</CustomField>