force-app/main/default/objects/CGD_Contract__c/fields/Customer_Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signatory_Title__c</fullName>
    <description>客戶簽約人職稱</description>
    <label>Customer Signatory Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>