force-app/main/default/objects/CGD_Contract__c/fields/Evaluatee__c.field-meta.xml
<CustomField>
    <fullName>Evaluatee__c</fullName>
    <description>評鑑對象</description>
    <label>Evaluatee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>