force-app/main/default/objects/CGD_Contract__c/fields/Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Date__c</fullName>
    <description>評鑑日期</description>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>