force-app/main/default/objects/CGD_Contract__c/fields/Evaluation_Item__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Item__c</fullName>
    <description>評鑑項目</description>
    <label>Evaluation Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cargo GHSP provide Documentation Handling and Support Service</fullName>
            </value>
            <value>
                <fullName>Cargo Terminal provide Cargo Physical Handling</fullName>
            </value>
            <value>
                <fullName>Cargo GHSP evaluation by COP</fullName>
            </value>
            <value>
                <fullName>Total average grade from Station</fullName>
            </value>
            <value>
                <fullName>Total average grade from COP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>