force-app/main/default/objects/CGD_Contract__c/fields/Evaluation_Result__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Result__c</fullName>
    <description>評鑑結果</description>
    <label>Evaluation Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Under Observation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>