force-app/main/default/objects/CGD_Contract__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <description>評鑑人員</description>
    <label>Evaluator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>