force-app/main/default/objects/CGD_Contract__c/fields/Improvement_Plan__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Plan__c</fullName>
    <description>改善計畫</description>
    <label>Improvement Plan</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>