force-app/main/default/objects/CGD_Contract__c/fields/Incentive_Calculate__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Calculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>打勾後，觸發統計Incentive數據</description>
    <inlineHelpText>打勾後，觸發統計Incentive數據</inlineHelpText>
    <label>Incentive Calculate</label>
    <type>Checkbox</type>
</CustomField>