force-app/main/default/objects/CGD_Contract__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>合約狀態是否啟用</description>
    <formula>AND(
    TODAY() &gt;= Start_Date__c,
    TODAY() &lt;= End_Date__c
  )</formula>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>