force-app/main/default/objects/CGD_Contract__c/fields/Join_Account__c.field-meta.xml
<CustomField>
    <fullName>Join_Account__c</fullName>
    <label>Join Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>