force-app/main/default/objects/CGD_Contract__c/fields/Pricing_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Mechanism__c</fullName>
    <description>價格計算方式</description>
    <label>Pricing Mechanism</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
            <value>
                <fullName>Index-Linked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>