force-app/main/default/objects/CGD_Contract__c/fields/Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>Reference_Code__c</fullName>
    <description>流水編碼</description>
    <label>Reference Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>