force-app/main/default/objects/CGD_Contract__c/fields/Renewal_Option__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Option__c</fullName>
    <description>是否可續約</description>
    <label>Renewal Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>