force-app/main/default/objects/CGD_Contract__c/fields/Revenue_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Yearly__c</fullName>
    <description>合約目標年金額</description>
    <label>Revenue - Yearly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>