force-app/main/default/objects/CGD_Contract__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>當保安聲明書到期日異動時，將欄位勾起，觸發執行flow做通知排程</description>
    <label>Schedule</label>
    <type>Checkbox</type>
</CustomField>