force-app/main/default/objects/CGD_Contract__c/fields/Security_Declaration_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Security_Declaration_Expire_Date__c</fullName>
    <description>保安聲明書到期日</description>
    <label>Security Declaration Expire Date</label>
    <type>Date</type>
</CustomField>