force-app/main/default/objects/CGD_Contract__c/fields/Special_Condition__c.field-meta.xml
<CustomField>
    <fullName>Special_Condition__c</fullName>
    <label>Special Condition</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>