force-app/main/default/objects/CGD_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
TODAY() &lt; Start_Date__c ,
IF(TEXT($User.LanguageLocaleKey) = &quot;zh_TW&quot;, &quot;未開始&quot;, &quot;Not Started&quot;),
IF(
TODAY() &lt;= End_Date__c ,
IF(TEXT($User.LanguageLocaleKey) = &quot;zh_TW&quot;, &quot;有效&quot;, &quot;Valid&quot;),
IF(TEXT($User.LanguageLocaleKey) = &quot;zh_TW&quot;, &quot;已過期&quot;, &quot;Invalid&quot;)
)
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>