force-app/main/default/objects/CGD_Contract__c/fields/Termination_Condition__c.field-meta.xml
<CustomField>
    <fullName>Termination_Condition__c</fullName>
    <description>終止條件</description>
    <label>Termination Condition</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>