force-app/main/default/objects/CGD_Contract__c/fields/Tonnage_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Tonnage_Yearly__c</fullName>
    <description>合約目標年總量</description>
    <label>Tonnage - Yearly</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>