force-app/main/default/objects/CGD_Contract__c/recordTypes/Block_Space_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Block_Space_Agreement</fullName>
    <active>true</active>
    <description>BSA</description>
    <label>Block Space Agreement</label>
</RecordType>