force-app/main/default/objects/CGD_Contract__c/recordTypes/Global_Region_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Global_Region_Incentive</fullName>
    <active>true</active>
    <description>激勵佣金方案</description>
    <label>Global/Region Incentive</label>
</RecordType>