force-app/main/default/objects/CGD_Contract__c/recordTypes/Security_Declaration.recordType-meta.xml
<RecordType>
    <fullName>Security_Declaration</fullName>
    <active>true</active>
    <description>保安聲明書</description>
    <label>Security Declaration</label>
</RecordType>