force-app/main/default/objects/CGD_Contract__c/recordTypes/Supplier_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Evaluation</fullName>
    <active>true</active>
    <description>供應商評鑑</description>
    <label>Supplier Evaluation</label>
</RecordType>