force-app/main/default/objects/CGD_Contract__c/recordTypes/Trucking_ULD_vendor_Contract.recordType-meta.xml
<RecordType>
    <fullName>Trucking_ULD_vendor_Contract</fullName>
    <active>true</active>
    <description>相關供應商合約</description>
    <label>Trucking &amp; ULD vendor Contract</label>
</RecordType>