force-app/main/default/objects/CGD_Contract__c/validationRules/ckStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ckStartDate</fullName>
    <active>true</active>
    <description>Start Date must be earlier than End Date.</description>
    <errorConditionFormula>Start_Date__c&gt;End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be earlier than End Date.</errorMessage>
</ValidationRule>